Fixing translation files.

--- a/po/extra/nl.po
+++ b/po/extra/nl.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: extra\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-01-14 20:48-0600\n"
+"POT-Creation-Date: 2022-01-19 23:15-0600\n"
 "PO-Revision-Date: 2022-01-17 14:37+0100\n"
+"Last-Translator: Heimen Stoffels <vistausss@fastmail.com>\n"
 "Language-Team: \n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 3.0\n"
-"Last-Translator: Heimen Stoffels <vistausss@fastmail.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language: nl\n"
 
 #: data/com.github.phase1geo.actioneer.desktop.in:3
 #: data/com.github.phase1geo.actioneer.appdata.xml.in:7
@@ -53,8 +53,8 @@ msgid ""
 "directories. Actioneer allows you to powerfully simplify and organize the "
 "content in your file system."
 msgstr ""
-"Maak regels aan om bestands- en mapacties te automatiseren. Actioneer "
-"maakt het je makkelijk, maar is tegelijk ook zéér krachtig."
+"Maak regels aan om bestands- en mapacties te automatiseren. Actioneer maakt "
+"het je makkelijk, maar is tegelijk ook zéér krachtig."
 
 #: data/com.github.phase1geo.actioneer.appdata.xml.in:15
 msgid "Watch multiple directories to run operations on."
@@ -69,8 +69,8 @@ msgid ""
 "Each rule can act on file matching one or more conditions and can perform "
 "one or more actions on those files."
 msgstr ""
-"Elke regel kan worden uitgevoerd op basis van één of meerdere voorwaarden "
-"en kan één of meerdere acties bevatten."
+"Elke regel kan worden uitgevoerd op basis van één of meerdere voorwaarden en "
+"kan één of meerdere acties bevatten."
 
 #: data/com.github.phase1geo.actioneer.appdata.xml.in:18
 msgid "File actions include: move, copy, rename."
